Add Candidates section + Corty/Kevin pages

--- a/about.html
+++ b/about.html
@@ -1,3 +1,13 @@
+<nav class="menu">
+  <a href="about.html">About</a>
+  <a href="issues.html">Issues &amp; Advocacy</a>
+  <a href="mayor.html">Mayor 2025</a>
+  <a href="events.html">Events</a>
+  <a href="news.html">News</a>
+  <a href="candidates.html">Candidates</a>
+  <a class="cta" href="get-involved.html">Join</a>
+  <a class="cta secondary" href="donate.html">Donate</a>
+</nav>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,15 +24,16 @@
           <img src="assets/logo.png" alt="United for E‑Town">
           <span class="brand-title">United for E‑Town</span>
         </a>
-        <nav class="menu">
-          <a href="about.html">About</a>
-          <a href="issues.html">Issues & Advocacy</a>
-          <a href="mayor.html">Mayor 2025</a>
-          <a href="events.html">Events</a>
-          <a href="news.html">News</a>
-          <a class="cta" href="get-involved.html">Join</a>
-          <a class="cta secondary" href="donate.html">Donate</a>
-        </nav>
+		<nav class="menu">
+		  <a href="about.html">About</a>
+		  <a href="issues.html">Issues &amp; Advocacy</a>
+		  <a href="mayor.html">Mayor 2025</a>
+		  <a href="events.html">Events</a>
+		  <a href="news.html">News</a>
+		  <a href="candidates.html">Candidates</a>
+		  <a class="cta" href="get-involved.html">Join</a>
+		  <a class="cta secondary" href="donate.html">Donate</a>
+		</nav>
       </div>
     </header>
     
