Updates and fixes

--- a/about.html
+++ b/about.html
@@ -1,82 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About — United for E‑Town</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>About — United for E-Town</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<header class="header">
-  <div class="container nav">
-    <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="United for E-Town logo" width="48">
-      <span class="brand-title">United for E-Town</span>
-    </a>
-    <nav class="menu" aria-label="Primary">
-      <a href="about.html">About</a>
-      <a href="issues.html">Issues &amp; Advocacy</a>
-      <a href="mayor.html">Mayor 2025</a>
-      <a href="events.html">Events</a>
-      <a href="news.html">News</a>
-      <a href="candidates.html">Candidates</a>
-      <a class="cta" href="get-involved.html">Join</a>
-      <a class="cta secondary" href="donate.html">Donate</a>
-    </nav>
-  </div>
-</header>
-
-        <section class="hero">
-          <div class="container">
-            <div class="grid cols-2" style="align-items:center">
-              <div>
-                <div class="badge">United for E‑Town</div>
-                <h1>About United for E‑Town</h1>
-                <p>Neighbors first. Politics second. Progress always.</p>
-                <div class="actions">
-                  <a class="btn primary" href="get-involved.html">Join the Coalition</a>
-                  <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
-                  <a class="btn ghost" href="issues.html">See the Issues</a>
-                </div>
-              </div>
-              <div style="justify-self:end;text-align:right">
-                <img src="assets/logo.png" alt="United for E-Town logo" />
-              </div>
-            </div>
-          </div>
-        </section>
-        
-<main>
-<section class="section">
- <div class="container grid cols-2">
-  <div>
-   <h2>What is United for E‑Town?</h2>
-   <p>We’re a non‑partisan local movement bringing neighbors together to support public schools, youth and families, and a vibrant local economy. We build coalitions, share data clearly, and get things done.</p>
-   <h3>Meet Jamie</h3>
-   <p>Jamie Fickes is a long‑time community volunteer, Scout leader, and project manager. He’s running for Mayor because strong schools, safe neighborhoods, and small business growth go hand‑in‑hand.</p>
-  </div>
-  <div>
-   <img src="assets/jamie.jpg" class="img-fluid" alt="Jamie Fickes">
-  </div>
- </div>
-</section>
-</main>
-
-    <footer class="footer">
-      <div class="container">
-        <div class="grid cols-3">
-          <div>
-            <strong>United for E‑Town</strong><br>
-            <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
-          </div>
-          <div>
-            <div class="small">Contact: <a href="mailto:hello@unitedforetown.org">hello@unitedforetown.org</a></div>
-            <div class="small">Facebook: <a href="#">/UnitedForETown</a></div>
-          </div>
-          <div class="small">Paid for by United for E‑Town. © 2025.</div>
+  <header class="header">
+    <div class="container nav">
+      <a class="brand" href="index.html">
+        <img src="assets/logo.png" alt="United for E-Town logo" width="48">
+        <span class="brand-title">United for E-Town</span>
+      </a>
+      <nav class="menu" aria-label="Primary">
+        <a href="about.html" aria-current="page">About</a>
+        <a href="issues.html">Issues &amp; Advocacy</a>
+        <a href="mayor.html">Mayor 2025</a>
+        <a href="events.html">Events</a>
+        <a href="news.html">News</a>
+        <a href="candidates.html">Candidates</a>
+        <a class="cta" href="get-involved.html">Join</a>
+        <a class="cta secondary" href="donate.html">Donate</a>
+      </nav>
+    </div>
+  </header>
+<section class="hero hero--sub">
+  <div class="container">
+    <div class="grid cols-2" style="align-items:center">
+      <div>
+        <div class="badge">United for E-Town</div>
+        <h1>About United for E-Town</h1>
+        <p>Neighbors first. Politics second. Progress always.</p>
+        <div class="actions">
+          <a class="btn primary" href="get-involved.html">Join us!</a>
+          <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
+          <a class="btn ghost" href="issues.html">Borough Candidates</a>
         </div>
       </div>
-    </footer>
-    
+      <div style="justify-self:end;text-align:right">
+        <img src="assets/logo.png" alt="United for E-Town logo">
+      </div>
+    </div>
+  </div>
+</section>
+
+  <main>
+    <section class="section">
+      <div class="container grid cols-2">
+        <div>
+          <h2>What is United for E-Town?</h2>
+          <p>We’re a non-partisan local movement bringing neighbors together to support public schools, youth and families, and a vibrant local economy. We build coalitions, share data clearly, and get things done.</p>
+
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="grid cols-3">
+        <div>
+          <strong>United for E-Town</strong><br>
+          <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
+        </div>
+        <div>
+          <div class="small">Contact: <a href="mailto:hello@unitedforetown.org">hello@unitedforetown.org</a></div>
+          <div class="small">Facebook: <a href="#">/UnitedForETown</a></div>
+        </div>
+        <div class="small">Paid for by United for E-Town. © 2025.</div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
