--- a/candidates.html
+++ b/candidates.html
@@ -14,16 +14,16 @@
         <img src="assets/logo.png" alt="United for E-Town logo" width="48">
         <span class="brand-title">United for E-Town</span>
       </a>
-      <nav class="menu" aria-label="Primary">
-        <a href="about.html">About</a>
-        <a href="issues.html">Issues</a>
-        <a href="mayor.html">Mayor 2025</a>
-        <a href="events.html">Events</a>
-        <a href="news.html">News</a>
-		<a href="candidates.html" aria-current="page">Candidates</a>
-        <a class="cta" href="get-involved.html">Join</a>
-        <a class="cta secondary" href="donate.html">Donate</a>
-      </nav>
+		<nav class="menu">
+		  <a href="about.html">About</a>
+		  <a href="issues.html">Issues &amp; Advocacy</a>
+		  <a href="mayor.html">Mayor 2025</a>
+		  <a href="events.html">Events</a>
+		  <a href="news.html">News</a>
+		  <a href="candidates.html">Candidates</a>
+		  <a class="cta" href="get-involved.html">Join</a>
+		  <a class="cta secondary" href="donate.html">Donate</a>
+		</nav>
     </div>
   </header>
 
