Header adjustments and cropping

--- a/kevin-karr.html
+++ b/kevin-karr.html
@@ -13,33 +13,63 @@
         <img src="assets/logo.png" alt="United for E-Town" width="48">
         <span class="brand-title">United for E-Town</span>
       </a>
-<nav class="menu">
-  <a href="about.html">About</a>
-  <a href="issues.html">Issues &amp; Advocacy</a>
-  <a href="mayor.html">Mayor 2025</a>
-  <a href="events.html">Events</a>
-  <a href="news.html">News</a>
-  <a href="candidates.html">Candidates</a>
-  <a class="cta" href="get-involved.html">Join</a>
-  <a class="cta secondary" href="donate.html">Donate</a>
-</nav>
-
+      <nav class="menu">
+        <a href="about.html">About</a>
+        <a href="issues.html">Issues &amp; Advocacy</a>
+        <a href="mayor.html">Mayor 2025</a>
+        <a href="events.html">Events</a>
+        <a href="news.html">News</a>
+        <a href="candidates.html">Candidates</a>
+        <a class="cta" href="get-involved.html">Join</a>
+        <a class="cta secondary" href="donate.html">Donate</a>
+      </nav>
     </div>
   </header>
 
   <main>
     <section class="section">
       <div class="container grid cols-2" style="align-items:start; gap:2rem">
-       <div class="profile">
-  <img src="assets/kevin.jpg" alt="Kevin Karr" loading="eager">
-</div>
+        <div class="profile">
+          <img src="assets/kevin.jpg" alt="Kevin Karr" loading="eager">
+        </div>
 
         <div>
           <h1>Kevin Karr</h1>
           <p class="small">Candidate for Judge of Elections</p>
 
           <h2>About Kevin</h2>
-          <p>Kevin Karr trained at culinary school, worked in professional kitchens, and built a career in the service industry. He knows the importance of precision, timing, and fairness — skills he now brings to public service.</p>
-          <p>
+          <p>Kevin Karr trained at culinary school, worked in professional kitchens, and built a career in the service industry. He knows the importance of precision, timing, and fairness — skills he brings to public service and election administration.</p>
+          <p>A lifelong Scout, Kevin leads younger scouts by living the Scout Oath and modeling calm, steady leadership.</p>
 
-			  
+          <h2>What the Judge of Elections Does</h2>
+          <ul>
+            <li>Oversees polling place operations on Election Day.</li>
+            <li>Works with inspectors and clerks to protect ballot integrity.</li>
+            <li>Ensures a fair, accessible process for every voter.</li>
+          </ul>
+
+          <div class="actions" style="margin-top:1rem">
+            <a class="btn ghost" href="candidates.html">← Back to Candidates</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <div class="grid cols-3">
+        <div>
+          <strong>United for E-Town</strong><br>
+          <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
+        </div>
+        <div>
+          <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>
+          <div class="small">Facebook: <a href="https://facebook.com/UnitedForETown">UnitedForETown</a></div>
+        </div>
+        <div class="small">Paid for by United for E-Town. © 2025.</div>
+      </div>
+    </div>
+  </footer>
+</body>
+</html>
