--- a/corty-byron.html
+++ b/corty-byron.html
@@ -54,6 +54,23 @@
       </div>
     </section>
   </main>
+<!-- Endorsements -->
+<section class="section endorsements">
+  <div class="container">
+    <h2>Endorsements</h2>
+    <div class="grid cols-3 logos">
+      <div class="endorsement">
+        <img src="assets/endorsements/org1.png" alt="Organization 1">
+      </div>
+      <div class="endorsement">
+        <img src="assets/endorsements/org2.png" alt="Organization 2">
+      </div>
+      <div class="endorsement">
+        <img src="assets/endorsements/org3.png" alt="Organization 3">
+      </div>
+    </div>
+  </div>
+</section>
 
   <footer class="footer">
     <div class="container">
