--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <title>About — United for E-Town</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="about">
   <header class="header">
     <div class="container nav">
       <a class="brand" href="index.html">
@@ -45,16 +45,107 @@
   </div>
 </section>
 
-  <main>
-    <section class="section">
-      <div class="container grid cols-2">
-        <div>
-          <h2>What is United for E-Town?</h2>
-          <p>We’re a non-partisan local movement bringing neighbors together to support public schools, youth and families, and a vibrant local economy. We build coalitions, share data clearly, and get things done.</p>
-
+<main>
+  <!-- Mission -->
+  <section class="section" id="mission">
+    <div class="container grid cols-2" style="align-items:start; gap:2rem">
+      <div>
+        <h2>Our Mission</h2>
+        <p>Bring neighbors together to support strong schools, safer streets, and a healthy local economy in Elizabethtown. We work on practical steps that improve daily life and respect how people differ.</p>
       </div>
-    </section>
-  </main>
+      <aside class="about-aside card">
+        <h3 style="margin-top:0">Quick facts</h3>
+        <ul>
+          <li>Non-partisan local coalition</li>
+          <li>Volunteer-led</li>
+          <li>Focus: schools · safety · small business</li>
+        </ul>
+      </aside>
+    </div>
+  </section>
+
+  <!-- Values -->
+  <section class="section" id="values">
+    <div class="container">
+      <h2>Our Values</h2>
+      <ul class="about-chips">
+        <li>Respect for every neighbor</li>
+        <li>Transparent communication</li>
+        <li>Data-informed decisions</li>
+        <li>Fiscal responsibility</li>
+        <li>Service over headlines</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- What we do -->
+  <section class="section" id="work">
+    <div class="container grid cols-3">
+      <article class="card">
+        <h3>Schools</h3>
+        <p>Share clear funding info, support safe facilities, and expand youth mental health resources.</p>
+        <a class="btn ghost" href="issues.html#schools">See school priorities →</a>
+      </article>
+      <article class="card">
+        <h3>Neighborhood Safety</h3>
+        <p>Push for traffic calming, safe crossings, and lighting near schools and parks.</p>
+        <a class="btn ghost" href="issues.html#safety">See safety plan →</a>
+      </article>
+      <article class="card">
+        <h3>Local Economy</h3>
+        <p>Back small business with simpler permitting and downtown activation.</p>
+        <a class="btn ghost" href="issues.html#economy">See economy plan →</a>
+      </article>
+    </div>
+  </section>
+
+  <!-- Leadership (Jamie) -->
+  <section class="section" id="leadership">
+    <div class="container grid cols-2" style="align-items:start; gap:2rem">
+      <div>
+        <img src="assets/jamie.jpg" alt="Jamie Fickes" class="img-fluid" loading="lazy">
+      </div>
+      <div>
+        <h2>Leadership</h2>
+        <h3 style="margin:.25rem 0 0">Jamie Fickes</h3>
+        <p class="small">Candidate for Mayor · Community volunteer · Scout leader · Project manager</p>
+        <p>Jamie has spent years organizing local service projects and mentoring youth. He believes strong schools, safe neighborhoods, and small business growth move together — and that town hall should work like a good project: clear goals, tight budgets, and steady follow-through.</p>
+        <div class="actions" style="margin-top:.5rem">
+          <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
+          <a class="btn ghost" href="candidates.html">Meet our candidates</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FAQ -->
+  <section class="section" id="faq">
+    <div class="container">
+      <h2>FAQ</h2>
+      <details>
+        <summary>Is United for E-Town partisan?</summary>
+        <p>No. We’re a local coalition focused on practical fixes that help families and small businesses.</p>
+      </details>
+      <details>
+        <summary>How can I get involved?</summary>
+        <p>Start with a small step: sign up to canvass a block, share a post, or help at an event.</p>
+      </details>
+      <details>
+        <summary>Where does my donation go?</summary>
+        <p>Outreach materials, community events, and tools that help neighbors connect and take action.</p>
+      </details>
+      <details>
+        <summary>Do you meet in person?</summary>
+        <p>Yes. Check the Events page for upcoming gatherings and town-hall style conversations.</p>
+      </details>
+      <div class="actions" style="margin-top:1rem">
+        <a class="btn primary" href="get-involved.html">Join the Coalition</a>
+        <a class="btn ghost" href="events.html">See Events</a>
+      </div>
+    </div>
+  </section>
+</main>
+
 
   <footer class="footer">
     <div class="container">
