--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>United for E-Town — Home</title>
 
   <!-- SEO -->
-  <meta name="description" content="United for E-Town is a community movement for strong schools, safe streets, and a shared future in Elizabethtown, PA. Join the coalition and get involved.">
-  <link rel="canonical" href="https://YOUR-SITE-DOMAIN/">
+  <meta name="description" content="United for E-Town is a community movement for strong schools, safe streets, and a shared future in Elizabethtown, PA. Join the us and get involved.">
+  <link rel="canonical" href="https://unitedforetown.com/">
 
   <!-- Social -->
   <meta property="og:title" content="United for E-Town — Home">
@@ -49,9 +49,9 @@
           <h1>United for E-Town</h1>
           <p>A community movement for strong schools, safe streets, and a shared future.</p>
           <div class="actions">
-            <a class="btn primary" href="get-involved.html">Join the Coalition</a>
+            <a class="btn primary" href="get-involved.html">Join Us</a>
             <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
-            <a class="btn ghost" href="issues.html">See the Issues</a>
+            <a class="btn secondary" href="candidates.html">Borough Council</a>
           </div>
         </div>
 
