--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <div class="actions">
             <a class="btn primary" href="get-involved.html">Join Us</a>
             <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
-            <a class="btn secondary" href="candidates.html">Borough Council</a>
+            <a class="btn ghost" href="candidates.html">Borough Council</a>
           </div>
         </div>
 
