Formatting and Updates

--- a/about.html
+++ b/about.html
@@ -7,24 +7,25 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="about">
-  <header class="header">
-    <div class="container nav">
-      <a class="brand" href="index.html">
-        <img src="assets/logo.png" alt="United for E-Town logo" width="48">
-        <span class="brand-title">United for E-Town</span>
-      </a>
-      <nav class="menu" aria-label="Primary">
-        <a href="about.html" aria-current="page">About</a>
-        <a href="issues.html">Issues &amp; Advocacy</a>
-        <a href="mayor.html">Mayor 2025</a>
-        <a href="events.html">Events</a>
-        <a href="news.html">News</a>
-        <a href="candidates.html">Candidates</a>
-        <a class="cta" href="get-involved.html">Join</a>
-        <a class="cta secondary" href="donate.html">Donate</a>
-      </nav>
-    </div>
-  </header>
+<header class="header">
+  <div class="container nav">
+    <a class="brand" href="index.html">
+      <img src="assets/logo.png" alt="United for E-Town logo" width="48" height="48">
+      <span class="brand-title">United for E-Town</span>
+    </a>
+    <nav class="menu" aria-label="Primary">
+      <a href="about.html" aria-current="page">About</a>
+      <a href="mayor.html">Mayor 2025</a>
+      <a href="candidates.html">Candidates</a>
+      <a href="issues.html">Issues &amp; Advocacy</a>
+      <a href="events.html">Events</a>
+      <a href="news.html">News</a>
+      <a class="cta" href="get-involved.html">Get Involved</a>
+      <a class="cta secondary" href="donate.html">Donate</a>
+    </nav>
+  </div>
+</header>
+
 <section class="hero hero--sub">
   <div class="container">
     <div class="grid cols-2" style="align-items:center">
