--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>United for E-Town — Home</title>
 
   <!-- SEO -->
-  <meta name="description" content="United for E-Town is a community movement for strong schools, safe streets, and a shared future in Elizabethtown, PA. Join the us and get involved.">
+  <meta name="description" content="United for E-Town is a community movement for strong schools, safe streets, and a shared future in Elizabethtown, PA. Join us and get involved.">
   <link rel="canonical" href="https://unitedforetown.com/">
 
   <!-- Social -->
   <meta property="og:title" content="United for E-Town — Home">
   <meta property="og:description" content="Strong schools. Safe streets. Shared future.">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://YOUR-SITE-DOMAIN/">
-  <meta property="og:image" content="https://YOUR-SITE-DOMAIN/assets/og-image.jpg">
+  <meta property="og:url" content="https://unitedforetown.com/">
+  <meta property="og:image" content="https://unitedforetown.com/assets/og-image.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="styles.css">
@@ -27,35 +27,33 @@
         <img src="assets/logo.png" alt="United for E-Town logo" width="48" height="48">
         <span class="brand-title">United for E-Town</span>
       </a>
-		<nav class="menu">
-		  <a href="about.html">About</a>
-		  <a href="issues.html">Issues &amp; Advocacy</a>
-		  <a href="mayor.html">Mayor 2025</a>
-		  <a href="events.html">Events</a>
-		  <a href="news.html">News</a>
-		  <a href="candidates.html">Candidates</a>
-		  <a class="cta" href="get-involved.html">Join</a>
-		  <a class="cta secondary" href="donate.html">Donate</a>
-		</nav>
-
+      <nav class="menu">
+        <a href="about.html">About</a>
+        <a href="mayor.html">Mayor 2025</a>
+        <a href="candidates.html">Candidates</a>
+        <a href="issues.html">Issues &amp; Advocacy</a>
+        <a href="events.html">Events</a>
+        <a href="news.html">News</a>
+        <a class="cta" href="get-involved.html">Get Involved</a>
+        <a class="cta secondary" href="donate.html">Donate</a>
+      </nav>
     </div>
   </header>
 
   <section class="hero">
     <div class="container">
-      <div class="grid cols-2 align-center">
+      <div class="grid cols-2" style="align-items:center">
         <div class="hero-copy">
           <div class="badge">United for E-Town</div>
           <h1>United for E-Town</h1>
           <p>A community movement for strong schools, safe streets, and a shared future.</p>
           <div class="actions">
-            <a class="btn primary" href="get-involved.html">Join Us</a>
+            <a class="btn primary" href="get-involved.html">Get Involved</a>
             <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
             <a class="btn ghost" href="candidates.html">Borough Council</a>
           </div>
         </div>
 
-        <!-- If this is decorative, hide from AT -->
         <div class="hero-media" aria-hidden="true">
           <img src="assets/logo.png" alt="" loading="eager" decoding="async" width="256" height="256">
         </div>
@@ -86,32 +84,56 @@
       </div>
     </section>
 
+    <section class="section" id="why-vote">
+      <div class="container">
+        <h2>Why your local vote matters</h2>
+        <p class="lead">
+          Local government touches daily life—streets, safety, zoning, and schools.
+          The stats below show how much is decided close to home.
+        </p>
+      </div>
+    </section>
+
     <section class="stat-band">
       <div class="container grid cols-3">
-        <div class="stat" aria-label="Graduation and wages can increase with targeted funding">
-          <div class="num">+7%</div>
-          <div class="label">Grad &amp; wages with targeted funding</div>
+        <div class="stat" aria-label="State and local share of U.S. infrastructure spending in 2023">
+          <div class="num">79%</div>
+          <div class="label">Infrastructure spend is state + local (2023)</div>
         </div>
-        <div class="stat" aria-label="Test gains with better ventilation">
-          <div class="num">+15%</div>
-          <div class="label">Test gains with better ventilation</div>
+
+        <div class="stat" aria-label="State legislative races decided by fewer than 100 votes in 2022">
+          <div class="num">1.64%</div>
+          <div class="label">2022 state races decided by &lt;100 votes</div>
         </div>
-        <div class="stat" aria-label="Return on investment for school mental health">
-          <div class="num">2–10×</div>
-          <div class="label">ROI on school mental health</div>
+
+        <div class="stat" aria-label="Average mayoral turnout off-cycle vs on-cycle">
+          <div class="num">26% → 61%</div>
+          <div class="label">Mayoral turnout off-cycle vs on-cycle</div>
         </div>
+      </div>
+
+      <div class="container small" style="margin-top:.5rem;color:#6b7280">
+        Sources: Brookings/CBO (infrastructure); Ballotpedia (close races); UCSD Yankelovich (turnout).
       </div>
     </section>
 
     <section class="section">
-      <div class="container grid cols-2 align-center">
+      <div class="container grid cols-2" style="align-items:center; gap:2rem">
         <div>
-          <h2>Why the Mayor Cares About Schools</h2>
-          <p>Schools drive property values, public safety, and our local economy. When schools thrive, towns do too. When schools crumble, we all pay more later.</p>
+          <h2>Why United for E-Town</h2>
+          <p>We’re running to bring neighbors together and focus on the basics: safe streets, strong schools, and a vibrant downtown. Local decisions set the budgets and policies you feel every day. When you speak up and vote, the borough listens.</p>
+
           <ul class="inline">
-            <li>Property values</li>
-            <li>Public safety</li>
-            <li>Workforce</li>
+            <li>Respect across differences</li>
+            <li>Transparent communication</li>
+            <li>Practical, data-informed fixes</li>
+          </ul>
+
+          <h3 style="margin:1rem 0 .5rem">Why your voice matters</h3>
+          <ul>
+            <li>Most street and school funding is decided locally.</li>
+            <li>Turnout in local races is low, so a few votes can tip outcomes.</li>
+            <li>Showing up—at meetings and at the polls—shapes what gets funded.</li>
           </ul>
         </div>
         <div>
@@ -128,10 +150,10 @@
           <strong>United for E-Town</strong><br>
           <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
         </div>
-		<div>
-		  <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>
-		  <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
-		</div>
+        <div>
+          <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>
+          <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
+        </div>
         <div class="small">Paid for by United for E-Town. © 2025.</div>
       </div>
     </div>
