--- a/contact.html
+++ b/contact.html
@@ -7,27 +7,25 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<header class="header">
+  <div class="container nav">
+    <a class="brand" href="index.html">
+      <img src="assets/logo.png" alt="United for E-Town logo" width="48" height="48">
+      <span class="brand-title">United for E-Town</span>
+    </a>
+    <nav class="menu" aria-label="Primary">
+      <a href="about.html">About</a>
+      <a href="mayor.html">Mayor 2025</a>
+      <a href="candidates.html">Candidates</a>
+      <a href="issues.html">Issues &amp; Advocacy</a>
+      <a href="events.html">Events</a>
+      <a href="news.html">News</a>
+      <a class="cta" href="get-involved.html">Get Involved</a>
+      <a class="cta secondary" href="donate.html">Donate</a>
+    </nav>
+  </div>
+</header>
 
-    <header class="header">
-      <div class="container nav">
-        <a class="brand" href="index.html">
-          <img src="assets/logo.png" alt="United for E‑Town">
-          <span class="brand-title">United for E‑Town</span>
-        </a>
-		<nav class="menu">
-		  <a href="about.html">About</a>
-		  <a href="issues.html">Issues &amp; Advocacy</a>
-		  <a href="mayor.html">Mayor 2025</a>
-		  <a href="events.html">Events</a>
-		  <a href="news.html">News</a>
-		  <a href="candidates.html">Candidates</a>
-		  <a class="cta" href="get-involved.html">Join</a>
-		  <a class="cta secondary" href="donate.html">Donate</a>
-		</nav>
-
-      </div>
-    </header>
-    
 
         <section class="hero">
           <div class="container">
