--- a/kevin-karr.html
+++ b/kevin-karr.html
@@ -3,51 +3,67 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kevin Karr — Judge of Elections | United for E-Town</title>
+  <title>Kevin Karr — Judge of Elections: Ward 1 | United for E-Town</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body class="kevin">
-  <header class="header">
-    <div class="container nav">
-      <a class="brand" href="index.html">
-        <img src="assets/logo.png" alt="United for E-Town" width="48">
-        <span class="brand-title">United for E-Town</span>
-      </a>
-      <nav class="menu">
-        <a href="about.html">About</a>
-        <a href="issues.html">Issues &amp; Advocacy</a>
-        <a href="mayor.html">Mayor 2025</a>
-        <a href="events.html">Events</a>
-        <a href="news.html">News</a>
-        <a href="candidates.html">Candidates</a>
-        <a class="cta" href="get-involved.html">Join</a>
-        <a class="cta secondary" href="donate.html">Donate</a>
-      </nav>
-    </div>
-  </header>
+<body class="corty">
+ <header class="header">
+  <div class="container nav">
+    <a class="brand" href="index.html">
+      <img src="assets/logo.png" alt="United for E-Town logo" width="48" height="48">
+      <span class="brand-title">United for E-Town</span>
+    </a>
+    <nav class="menu" aria-label="Primary">
+      <a href="about.html">About</a>
+      <a href="mayor.html">Mayor 2025</a>
+      <a href="candidates.html">Candidates</a>
+      <a href="issues.html">Issues &amp; Advocacy</a>
+      <a href="events.html">Events</a>
+      <a href="news.html">News</a>
+      <a class="cta" href="get-involved.html">Get Involved</a>
+      <a class="cta secondary" href="donate.html">Donate</a>
+    </nav>
+  </div>
+</header>
+
 
   <main>
     <section class="section">
       <div class="container grid cols-2" style="align-items:start; gap:2rem">
-        <div class="profile">
-          <img src="assets/kevin.jpg" alt="Kevin Karr" loading="eager">
-        </div>
-
+     <div class="profile">
+  <img src="assets/kevin.jpg" alt="Corty Byron" loading="eager">
+</div>
         <div>
           <h1>Kevin Karr</h1>
-          <p class="small">Candidate for Judge of Elections</p>
+          <p class="small">Judge of Elections Ward 1</p>
 
-          <h2>About Kevin</h2>
-          <p>Kevin Karr trained at culinary school, worked in professional kitchens, and built a career in the service industry. He knows the importance of precision, timing, and fairness — skills he brings to public service and election administration.</p>
-          <p>A lifelong Scout, Kevin leads younger scouts by living the Scout Oath and modeling calm, steady leadership.</p>
+<h2>About Kevin</h2>
+<p>Kevin Karr trained at culinary school and worked in professional kitchens for years. He brings precision, timing, and calm problem-solving to public service.</p>
+<p>He’s a lifelong Scout and now a troop leader. He teaches the same steady, service-first approach he learned growing up.</p>
 
-          <h2>What the Judge of Elections Does</h2>
-          <ul>
-            <li>Oversees polling place operations on Election Day.</li>
-            <li>Works with inspectors and clerks to protect ballot integrity.</li>
-            <li>Ensures a fair, accessible process for every voter.</li>
-          </ul>
+<h3>Skills from the kitchen</h3>
+<ul>
+  <li>Precision and clear record-keeping</li>
+  <li>Timing and queue management</li>
+  <li>Calm under pressure</li>
+  <li>Fair, consistent standards</li>
+  <li>Team leadership on busy days</li>
+</ul>
 
+<h3>Scout Oath he lives by</h3>
+<ul class="small">
+  <li>On my honor, I will do my best</li>
+  <li>To do my duty to God and my country and to obey the Scout Law</li>
+  <li>To help other people at all times</li>
+  <li>To keep myself physically strong, mentally awake, and morally straight</li>
+</ul>
+
+<h3>What a Judge of Elections does</h3>
+<ul>
+  <li>Runs the polling place on Election Day</li>
+  <li>Works with inspectors and clerks to protect ballot handling</li>
+  <li>Supports an accessible process for every voter</li>
+</ul>
           <div class="actions" style="margin-top:1rem">
             <a class="btn ghost" href="candidates.html">← Back to Candidates</a>
           </div>
@@ -80,9 +96,9 @@
           <strong>United for E-Town</strong><br>
           <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
         </div>
-        <div>
-          <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>		  <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
-        </div>
+		<div>
+		  <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>		  <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
+		</div>
         <div class="small">Paid for by United for E-Town. © 2025.</div>
       </div>
     </div>
