header adjustment for mobile

--- a/kevin-karr.html
+++ b/kevin-karr.html
@@ -41,7 +41,13 @@
 <p>Kevin Karr trained at culinary school and worked in professional kitchens for years. He brings precision, timing, and calm problem-solving to public service.</p>
 <p>He’s a lifelong Scout and now a troop leader. He teaches the same steady, service-first approach he learned growing up.</p>
 
-<h3>Skills from the kitchen</h3>
+<h3>What a Judge of Elections does</h3>
+<ul>
+  <li>Runs the polling place on Election Day</li>
+  <li>Works with inspectors and clerks to protect ballot handling</li>
+  <li>Supports an accessible process for every voter</li>
+</ul>
+<h3>Skills that you want in a Judge of Elections (and in the service industry).</h3>
 <ul>
   <li>Precision and clear record-keeping</li>
   <li>Timing and queue management</li>
@@ -58,12 +64,6 @@
   <li>To keep myself physically strong, mentally awake, and morally straight</li>
 </ul>
 
-<h3>What a Judge of Elections does</h3>
-<ul>
-  <li>Runs the polling place on Election Day</li>
-  <li>Works with inspectors and clerks to protect ballot handling</li>
-  <li>Supports an accessible process for every voter</li>
-</ul>
           <div class="actions" style="margin-top:1rem">
             <a class="btn ghost" href="candidates.html">← Back to Candidates</a>
           </div>
