Mobile formatting and consistency

--- a/index.html
+++ b/index.html
@@ -62,29 +62,32 @@
   </section>
 
   <main>
+	  
     <section class="section">
-      <div class="container grid cols-3">
-        <div class="card">
-          <h3>Strong Schools → Strong Town</h3>
-          <p>Fair funding, safe facilities, and youth mental health are the backbone of a thriving E-Town.</p>
-          <a href="strong-schools.html" class="card-link">Read the plan →</a>
-        </div>
+      <div class="container grid cols-2" style="align-items:center; gap:2rem">
+        <div>
+          <h2>Why United for E-Town</h2>
+          <p>We’re running to bring neighbors together and focus on the basics: safe streets, strong schools, and a vibrant downtown. Local decisions set the budgets and policies you feel every day. When you speak up and vote, the borough listens.</p>
 
-        <div class="card">
-          <h3>Safe &amp; Connected Neighborhoods</h3>
-          <p>Traffic calming, lighting, and safer crossings near schools and parks.</p>
-          <a href="issues.html#safety" class="card-link">See priorities →</a>
-        </div>
+          <ul class="inline">
+            <li>Respect across differences</li>
+            <li>Transparent communication</li>
+            <li>Practical, data-informed fixes</li>
+          </ul>
 
-        <div class="card">
-          <h3>Local Economy &amp; Small Business</h3>
-          <p>Clear permitting, storefront activation, and a workforce pipeline from our schools.</p>
-          <a href="issues.html#economy" class="card-link">Learn more →</a>
+          <h3 style="margin:1rem 0 .5rem">Why your voice matters</h3>
+          <ul>
+            <li>Most street and school funding is decided locally.</li>
+            <li>Turnout in local races is low, so a few votes can tip outcomes.</li>
+            <li>Showing up—at meetings and at the polls—shapes what gets funded.</li>
+          </ul>
+        </div>
+        <div>
+          <img class="img-fluid" src="assets/group.jpg" alt="Community leaders in Elizabethtown" loading="lazy" decoding="async" width="800" height="534">
         </div>
       </div>
     </section>
-
-    <section class="section" id="why-vote">
+     <section class="section" id="why-vote">
       <div class="container">
         <h2>Why your local vote matters</h2>
         <p class="lead">
@@ -116,48 +119,45 @@
         Sources: Brookings/CBO (infrastructure); Ballotpedia (close races); UCSD Yankelovich (turnout).
       </div>
     </section>
-
-    <section class="section">
-      <div class="container grid cols-2" style="align-items:center; gap:2rem">
-        <div>
-          <h2>Why United for E-Town</h2>
-          <p>We’re running to bring neighbors together and focus on the basics: safe streets, strong schools, and a vibrant downtown. Local decisions set the budgets and policies you feel every day. When you speak up and vote, the borough listens.</p>
-
-          <ul class="inline">
-            <li>Respect across differences</li>
-            <li>Transparent communication</li>
-            <li>Practical, data-informed fixes</li>
-          </ul>
-
-          <h3 style="margin:1rem 0 .5rem">Why your voice matters</h3>
-          <ul>
-            <li>Most street and school funding is decided locally.</li>
-            <li>Turnout in local races is low, so a few votes can tip outcomes.</li>
-            <li>Showing up—at meetings and at the polls—shapes what gets funded.</li>
-          </ul>
+	  
+	  <section class="section">
+      <div class="container grid cols-3">
+        <div class="card">
+          <h3>Strong Schools → Strong Town</h3>
+          <p>Fair funding, safe facilities, and youth mental health are the backbone of a thriving E-Town.</p>
+          <a href="strong-schools.html" class="card-link">Read the plan →</a>
         </div>
-        <div>
-          <img class="img-fluid" src="assets/group.jpg" alt="Community leaders in Elizabethtown" loading="lazy" decoding="async" width="800" height="534">
+
+        <div class="card">
+          <h3>Safe &amp; Connected Neighborhoods</h3>
+          <p>Traffic calming, lighting, and safer crossings near schools and parks.</p>
+          <a href="issues.html#safety" class="card-link">See priorities →</a>
+        </div>
+
+        <div class="card">
+          <h3>Local Economy &amp; Small Business</h3>
+          <p>Clear permitting, storefront activation, and a workforce pipeline from our schools.</p>
+          <a href="issues.html#economy" class="card-link">Learn more →</a>
         </div>
       </div>
     </section>
   </main>
 
-  <footer class="footer">
-    <div class="container">
-      <div class="grid cols-3">
-        <div>
-          <strong>United for E-Town</strong><br>
-          <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
+    <footer class="footer">
+      <div class="container">
+        <div class="grid cols-3">
+          <div>
+            <strong>United for E‑Town</strong><br>
+            <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
+          </div>
+          <div>
+            <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">Email Us</a></div>
+            <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61574407626864">UnitedForETown</a></div>
+          </div>
+          <div class="small">Paid for by United for E‑Town. © 2025.</div>
         </div>
-        <div>
-          <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>
-          <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
-        </div>
-        <div class="small">Paid for by United for E-Town. © 2025.</div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
 </body>
 </html>
