--- a/get-involved.html
+++ b/get-involved.html
@@ -49,7 +49,7 @@
         
 <main>
 <section class="section container">
-  <h2>Join the Coalition</h2>
+  <h2>Join Us</h2>
   <p>Add your name to get updates, volunteer opportunities, and event invites.</p>
   <div class="card">
     <p class="small">Embed your Google Form or Airtable form here (paste the iframe). For now, use this placeholder:</p>
@@ -70,9 +70,10 @@
             <strong>United for E‑Town</strong><br>
             <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
           </div>
-		<div>
-		  <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>		  <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
-		</div>
+          <div>
+            <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">Email Us</a></div>
+            <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61574407626864">UnitedForETown</a></div>
+          </div>
           <div class="small">Paid for by United for E‑Town. © 2025.</div>
         </div>
       </div>
