--- a/issues.html
+++ b/issues.html
@@ -74,9 +74,10 @@
             <strong>United for E‑Town</strong><br>
             <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
           </div>
-		<div>
-		  <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>		  <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
-		</div>
+          <div>
+            <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">Email Us</a></div>
+            <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61574407626864">UnitedForETown</a></div>
+          </div>
           <div class="small">Paid for by United for E‑Town. © 2025.</div>
         </div>
       </div>
