--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,7 @@
                 <div class="badge">United for E‑Town</div>
                 <h1>Say hello</h1>
                 <p>We’d love to hear from you.</p>
-                <div class="actions">
-                  <a class="btn primary" href="get-involved.html">Join the Coalition</a>
+                <div class="actions">    <a class="btn primary" href="get-involved.html">Join Us</a>
                   <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
                   <a class="btn ghost" href="issues.html">See the Issues</a>
                 </div>
