--- a/strong-schools.html
+++ b/strong-schools.html
@@ -35,8 +35,7 @@
                 <div class="badge">United for E‑Town</div>
                 <h1>Strong Schools → Strong Town</h1>
                 <p>The fiscally responsible path: invest smart, save more later.</p>
-                <div class="actions">
-                  <a class="btn primary" href="get-involved.html">Join the Coalition</a>
+                <div class="actions">    <a class="btn primary" href="get-involved.html">Join Us</a>
                   <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
                   <a class="btn ghost" href="issues.html">See the Issues</a>
                 </div>
