--- a/about.html
+++ b/about.html
@@ -139,8 +139,7 @@
         <summary>Do you meet in person?</summary>
         <p>Yes. Check the Events page for upcoming gatherings and town-hall style conversations.</p>
       </details>
-      <div class="actions" style="margin-top:1rem">
-        <a class="btn primary" href="get-involved.html">Join the Coalition</a>
+      <div class="actions" style="margin-top:1rem">    <a class="btn primary" href="get-involved.html">Join Us</a>
         <a class="btn ghost" href="events.html">See Events</a>
       </div>
     </div>
