--- a/get-involved.html
+++ b/get-involved.html
@@ -1,83 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Get Involved — United for E‑Town</title>
-<link rel="stylesheet" href="styles.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Get Involved — United for E-Town</title>
+
+  <meta name="description" content="Get Involved with United for E-Town. Volunteer, host a conversation, request a yard sign, or get updates.">
+  <link rel="canonical" href="https://unitedforetown.com/get-involved.html">
+
+  <meta property="og:title" content="Get Involved — United for E-Town">
+  <meta property="og:description" content="Volunteer, host, request a sign, or get updates.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://unitedforetown.com/get-involved.html">
+  <meta property="og:image" content="https://unitedforetown.com/assets/og-image.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-<header class="header">
-  <div class="container nav">
-    <a class="brand" href="index.html">
-      <img src="assets/logo.png" alt="United for E-Town logo" width="48" height="48">
-      <span class="brand-title">United for E-Town</span>
-    </a>
-    <nav class="menu" aria-label="Primary">
-      <a href="about.html">About</a>
-      <a href="mayor.html">Mayor 2025</a>
-      <a href="candidates.html">Candidates</a>
-      <a href="issues.html">Issues &amp; Advocacy</a>
-      <a href="events.html">Events</a>
-      <a href="news.html">News</a>
-      <a class="cta" href="get-involved.html">Get Involved</a>
-      <a class="cta secondary" href="donate.html">Donate</a>
-    </nav>
-  </div>
-</header>
-
-
-        <section class="hero">
-          <div class="container">
-            <div class="grid cols-2" style="align-items:center">
-              <div>
-                <div class="badge">United for E‑Town</div>
-                <h1>Be part of United for E‑Town</h1>
-                <p>Volunteer, request a yard sign, or just stay in the loop.</p>
-                <div class="actions">
-                  <a class="btn primary" href="get-involved.html">Join the Coalition</a>
-                  <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
-                  <a class="btn ghost" href="issues.html">See the Issues</a>
-                </div>
-              </div>
-              <div style="justify-self:end;text-align:right">
-                <img src="assets/logo.png" alt="United for E-Town logo" />
-              </div>
-            </div>
-          </div>
-        </section>
-        
-<main>
-<section class="section container">
-  <h2>Join Us</h2>
-  <p>Add your name to get updates, volunteer opportunities, and event invites.</p>
-  <div class="card">
-    <p class="small">Embed your Google Form or Airtable form here (paste the iframe). For now, use this placeholder:</p>
-    <div style="background:#f0f3ff;border:1px dashed #b7c0ff;border-radius:12px;padding:1rem;text-align:center">
-      <em>Form goes here (Google Forms/Airtable iframe).</em>
+<body class="about">
+  <!-- Header -->
+  <header class="header">
+    <div class="container nav">
+      <a class="brand" href="index.html">
+        <img src="assets/logo.png" alt="United for E-Town logo" width="48" height="48">
+        <span class="brand-title">United for E-Town</span>
+      </a>
+      <nav class="menu" aria-label="Primary">
+        <a href="about.html">About</a>
+        <a href="mayor.html">Mayor 2025</a>
+        <a href="candidates.html">Candidates</a>
+        <a href="issues.html">Issues &amp; Advocacy</a>
+        <a href="events.html">Events</a>
+        <a href="news.html">News</a>
+        <a class="cta" href="get-involved.html" aria-current="page">Get Involved</a>
+        <a class="cta secondary" href="donate.html">Donate</a>
+      </nav>
     </div>
-  </div>
+  </header>
 
-  <h3 style="margin-top:1.25rem">Yard Signs</h3>
-  <p>Want a yard sign? Use the same form above and select “Yard Sign.”</p>
-</section>
-</main>
-
-    <footer class="footer">
-      <div class="container">
-        <div class="grid cols-3">
-          <div>
-            <strong>United for E‑Town</strong><br>
-            <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
-          </div>
-          <div>
-            <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">Email Us</a></div>
-            <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?viewas=100000686899395&id=61574407626864">UnitedForETown</a></div>
-          </div>
-          <div class="small">Paid for by United for E‑Town. © 2025.</div>
+  <!-- Hero -->
+  <section class="hero hero--sub">
+    <div class="container">
+      <div class="grid cols-2" style="align-items:center">
+        <div>
+          <div class="badge">United for E-Town</div>
+          <h1>Get Involved</h1>
+          <p class="lead">You make the difference—help with a short shift, host a conversation, or subscribe for updates.</p>
+        </div>
+        <div class="hero-media" aria-hidden="true">
+          <img src="assets/logo.png" alt="" width="180" height="180">
         </div>
       </div>
-    </footer>
-    
+    </div>
+  </section>
+
+  <main>
+    <!-- Quick options -->
+    <section class="section">
+      <div class="container grid cols-3">
+        <article class="card">
+          <h3>Volunteer</h3>
+          <p>Door-knock a few blocks, make calls, help at events, or place yard signs.</p>
+          <a class="btn ghost" href="#form">I can help →</a>
+        </article>
+        <article class="card">
+          <h3>Host a Conversation</h3>
+          <p>Gather a few neighbors at home, a park, or a café. We’ll bring materials.</p>
+          <a class="btn ghost" href="#form">Host a meetup →</a>
+        </article>
+        <article class="card">
+          <h3>Get Updates</h3>
+          <p>Prefer email or text? Subscribe and we’ll send only what matters.</p>
+          <a class="btn ghost" href="#form">Subscribe →</a>
+        </article>
+      </div>
+    </section>
+
+    <!-- Netlify form -->
+    <section class="section" id="form">
+      <div class="container">
+        <h2>Tell us how you’d like to help</h2>
+
+        <!-- Netlify Forms works by adding data-netlify and a hidden form-name input -->
+        <form name="volunteer" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="card" style="padding:1rem">
+          <input type="hidden" name="form-name" value="volunteer">
+          <p style="display:none">
+            <label>Don’t fill this out: <input name="bot-field"></label>
+          </p>
+
+          <div class="grid cols-2">
+            <p>
+              <label>First name<br>
+                <input type="text" name="first_name" required>
+              </label>
+            </p>
+            <p>
+              <label>Last name<br>
+                <input type="text" name="last_name" required>
+              </label>
+            </p>
+            <p>
+              <label>Email<br>
+                <input type="email" name="email" required>
+              </label>
+            </p>
+            <p>
+              <label>Mobile (optional)<br>
+                <input type="tel" name="phone">
+              </label>
+            </p>
+            <p class="cols-2">
+              <label>Street (optional)<br>
+                <input type="text" name="street">
+              </label>
+            </p>
+          </div>
+
+          <fieldset style="margin:.5rem 0">
+            <legend><strong>Interests</strong></legend>
+            <label><input type="checkbox" name="interests" value="door-knocking"> Door-knocking</label><br>
+            <label><input type="checkbox" name="interests" value="phonebank"> Phone/Text bank</label><br>
+            <label><input type="checkbox" name="interests" value="events"> Events</label><br>
+            <label><input type="checkbox" name="interests" value="yard-sign"> Yard sign</label><br>
+            <label><input type="checkbox" name="interests" value="host-meetup"> Host a conversation</label><br>
+            <label><input type="checkbox" name="interests" value="data"> Data/Research</label><br>
+            <label><input type="checkbox" name="interests" value="design"> Design/Printing</label>
+          </fieldset>
+
+          <p>
+            <label>Notes (optional)<br>
+              <textarea name="notes" rows="4" placeholder="Anything we should know?"></textarea>
+            </label>
+          </p>
+
+          <p>
+            <button class="btn primary" type="submit">Submit</button>
+            <a class="btn ghost" href="mailto:unitedforetown@gmail.com">Email instead</a>
+          </p>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container">
+      <div class="grid cols-3">
+        <div>
+          <strong>United for E-Town</strong><br>
+          <span class="small">A community movement for strong schools, safe streets, and a shared future.</span>
+        </div>
+        <div>
+          <div class="small">Contact: <a href="mailto:unitedforetown@gmail.com">unitedforetown@gmail.com</a></div>
+          <div class="small">Facebook: <a href="https://www.facebook.com/profile.php?id=61574407626864">UnitedForETown</a></div>
+        </div>
+        <div class="small">Paid for by United for E-Town. © 2025.</div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
