--- a/issues.html
+++ b/issues.html
@@ -33,8 +33,7 @@
                 <div class="badge">United for E‑Town</div>
                 <h1>Issues & Advocacy</h1>
                 <p>What ‘United for E‑Town’ means in practice.</p>
-                <div class="actions">
-                  <a class="btn primary" href="get-involved.html">Join the Coalition</a>
+                <div class="actions">    <a class="btn primary" href="get-involved.html">Join Us</a>
                   <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
                   <a class="btn ghost" href="issues.html">See the Issues</a>
                 </div>
