--- a/mayor.html
+++ b/mayor.html
@@ -34,8 +34,7 @@
                 <div class="badge">United for E‑Town</div>
                 <h1>Jamie Fickes for Mayor 2025</h1>
                 <p>United for E‑Town — a campaign that puts community first.</p>
-                <div class="actions">
-                  <a class="btn primary" href="get-involved.html">Join the Coalition</a>
+                <div class="actions">    <a class="btn primary" href="get-involved.html">Join Us</a>
                   <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
                   <a class="btn ghost" href="issues.html">See the Issues</a>
                 </div>
