--- a/news.html
+++ b/news.html
@@ -35,8 +35,7 @@
                 <div class="badge">United for E‑Town</div>
                 <h1>News & Updates</h1>
                 <p>Follow the latest from United for E‑Town.</p>
-                <div class="actions">
-                  <a class="btn primary" href="get-involved.html">Join the Coalition</a>
+                <div class="actions">    <a class="btn primary" href="get-involved.html">Join Us</a>
                   <a class="btn accent" href="mayor.html">Jamie for Mayor 2025</a>
                   <a class="btn ghost" href="issues.html">See the Issues</a>
                 </div>
