--- a/donate.html
+++ b/donate.html
@@ -59,29 +59,40 @@
       <div class="container grid cols-2" style="align-items:start; gap:2rem">
         <!-- Online -->
         <article class="card">
-          <h2 style="margin-top:0">Donate Online</h2>
+          <h2 style="margin-top:0">Donate Online To Us</h2>
           <p>Give securely using our ActBlue page.</p>
           <div class="actions" style="margin-top:.5rem">
-            <a class="btn primary" href="https://secure.actblue.com/donate/united-for-etown-1" target="_blank" rel="noopener">Donate via ActBlue</a>
-            <a class="btn ghost" href="#by-mail">Donate by mail</a>
-          </div>
+            <a class="btn primary" href="https://secure.actblue.com/donate/united-for-etown-1" target="_blank" rel="noopener">Donate to All  via ActBlue</a>
+                 </div>
+		   <div class="actions" style="margin-top:.5rem">
+           <a class="btn primary" href="https://secure.actblue.com/donate/kevinforetown" target="_blank" rel="noopener">Donate To Kevin</a>
+                 </div>
+			<div class="actions" style="margin-top:.5rem">
+           <a class="btn primary" href="https://secure.actblue.com/donate/cortyforetown" target="_blank" rel="noopener">Donate To Corty</a>
+                 </div>
+				   <div class="actions" style="margin-top:.5rem">
+           <a class="btn primary" href="https://secure.actblue.com/donate/fickes" target="_blank" rel="noopener">Donate To Jamie</a>
+                 </div>
           <p class="small" style="margin-top:.5rem;color:#6b7280">You’ll be taken to a secure ActBlue page to complete your donation.</p>
+			
+			
+			
+			
         </article>
 
         <!-- By mail -->
-        <article class="card" id="by-mail">
-          <h2 style="margin-top:0">Donate by Mail</h2>
-          <p>Prefer a check? Please make it payable to:</p>
-          <!-- TODO: replace with your real payee and address -->
-          <address style="font-style:normal; line-height:1.5">
-United for E-Town<br>
-15 Cottage Aveue
-          </address>
-          <address style="font-style:normal; line-height:1.5">
-          &nbsp;lizabethtown, PA 17022
-          </address>
-<p class="small" style="color:#6b7280">Include your email to receive a receipt.</p>
-        </article>
+       <article class="card" id="by-mail">
+  <h2 style="margin-top:0">Donate by Mail</h2>
+  <p>Prefer a check? Please make it payable to:</p>
+  <address style="font-style:normal; line-height:1.5">
+    United for E-Town:<br>
+    15 Cottage Avenue<br>
+    Elizabethtown, PA 17022<br>
+	 <i>	Put in your comment if you want it to go to a specific candidate<br></i>
+  </address>
+  <p class="small" style="color:#6b7280">Include your email to receive a receipt.</p>
+</article>
+
       </div>
     </section>
 
